--- a/Ritchie Blackmore Quote Generator/style.css
+++ b/Ritchie Blackmore Quote Generator/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    background-color: rgb(163, 109, 177);
+}
 header{
     display: flex;
     align-items: center;
@@ -14,10 +16,21 @@ header{
     margin-top: 2em;
     text-align: center;
     color: #fff;
+    border-radius: 5em;
 }
-
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 2em;
+    background-color: rgb(163, 109, 177);
+    margin-top: 2em;
+    text-align: center;
+}
 .quote{
-    font-size: 2em;
+    font-size: 3em;
 }
 
 .btn-large{
@@ -36,12 +49,12 @@ header{
     color: #fff;
     border-radius: 45px;
     width: 10em;
-    height: 3em;
+    height: 4em;
     margin: 2em;
 }
 
 #button:hover{
-    background-color: rgb(71, 71, 143);
+    background-color: rgb(89, 39, 112);
     border-color: rgb(121, 24, 116);
     cursor: pointer;
 }
